changed web loader behavior, prepearing integretion test

--- a/web/index.html
+++ b/web/index.html
@@ -31,8 +31,8 @@
         width: 80px;
         height: 10px;
       
-        -webkit-animation: spin 2s alternate infinite;
-        animation: spin 2s alternate infinite;
+        -webkit-animation: spin 2s ease-in-out infinite;
+        animation: spin 2s ease-in-out infinite;
       }
       .loader-element-second {
         border: 16px solid #f3f3f3;
@@ -41,8 +41,8 @@
         border-right: 16px solid black;
         border-bottom: 16px solid black;
         border-left: 16px solid black;
-        height: 10px;
-        width: 80px;
+        height: 80px;
+        width: 10px;
       
         -webkit-animation: spin 2s ease-in-out infinite;
         animation: spin 2s ease-in-out infinite;
