fixed nginx and url strategy conflict, added telegram web app support

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
   <link rel="manifest" href="manifest.json">
+  <script src="https://telegram.org/js/telegram-web-app.js" defer></script>
   
     <meta charset="UTF-8">
 
